--- a/counter-cli/pom.xml
+++ b/counter-cli/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>TranscriptPwmCounter</artifactId>
         <groupId>org.monarchinitiative.pwm_transcript_annotator</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
