--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.monarchinitiative.pwm_transcript_annotator</groupId>
     <artifactId>TranscriptPwmCounter</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <modules>
         <module>counter-cli</module>
     </modules>
